--- a/adito/webapp/theme/default/dialogStyles.css
+++ b/adito/webapp/theme/default/dialogStyles.css
@@ -18,7 +18,6 @@
 
 .dialog_content {	
 	width: 100%;
-	min-width: 100%;
 	background-color: #e6e6e6;
     text-align: center;
 	border: 1px solid #dcdcdc;
